--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="js-html">
   <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta charset="utf-8" />
 	<link rel="icon" href="%PUBLIC_URL%/bug-icon-turkish-blue-with-white-background.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
